--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,12 @@
 	<link rel="stylesheet" href="/css/reset.css">
 	<link rel="stylesheet" href="/style.css">
 	<link rel="stylesheet" href="/dashadd.css">
+
+		<!-- Chat Bot StyleSheet -->
+		<link rel="stylesheet" href="/chat.css">
+
+	
+
 </head>
     <body>  
     <noscript>You need to enable JavaScript to run this app.</noscript>
@@ -119,6 +125,13 @@
 	<!-- Active JS -->		
 	<script src="/assets/scripts/dashadd.js"></script>
 	<!-- <script src="/scriptchatbot.js"></script> -->
+
+
+		<!-- ChatBot JS -->		
+	
+
+
+
 </body>
 
 <!-- index-431:47-->
